# groucho

./: Cargo.toml  README.md  flake.nix
resources/: groucho.desktop
src/: diffusion.rs  infer.rs  main.rs
