[package]
name = "groucho"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 3               # Use slightly better optimizations.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.17.1"
gdk = "0.17.1"
gio = "0.17.10"
candle = { version = "0.3.1", package = "candle-core" }
candle-examples = { version = "0.3.1" }
candle-nn = { version = "0.3.1" }
candle-transformers = { version = "0.3.1" }
tracing-chrome = "0.7.1"
tracing-subscriber = "0.3.17"
clap = "4.4.7"
hf-hub = "0.3.2"
image = "*"
tokenizers = "0.13.4"
anyhow = "1.0.75"
tokio = "1.35.1"
glib = "0.18.4"
ashpd = "0.6.7"
